--- a/src/app/components/top-nav-bar/top-nav-bar.component.html
+++ b/src/app/components/top-nav-bar/top-nav-bar.component.html
@@ -6,10 +6,13 @@
     <nav class="top-nav-bar-buttons">
         <ul class="nav-buttons">
             <li>
-                <a href="#about-me" (click)="setActive('about-me')">About Me</a> <!--description + skills-->
+                <a href="#home" (click)="setActive('home')">Home</a>
             </li>
             <li>
-                <a href="#experience" (click)="setActive('experience')">Experience</a> <!--past competition, intern-->
+                <a href="#about-me" (click)="setActive('about-me')">About Me</a> 
+            </li>
+            <li>
+                <a href="#skills" (click)="setActive('skills')">Skills</a>
             </li>
             <li>
                 <a href="#projects" (click)="setActive('projects')">Past Projects</a>
