--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,6 @@
-<app-top-nav-bar></app-top-nav-bar>
-<div class="content-body">
-    <!-- <app-home></app-home>
-    <app-about-me></app-about-me>
-    <app-skills></app-skills>
-    <app-experience></app-experience>
-    <app-projects></app-projects> -->
-    <app-contact></app-contact>
-    <app-footer></app-footer>
+<div>
+  <app-top-nav-bar></app-top-nav-bar>
+  <div>
+    <router-outlet></router-outlet>
+  </div>
 </div>
