--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,12 +1,25 @@
-<div class="about-me-container" id="about-me">
-    <div class="about-me-description">
-        <h2> - About Me - </h2>
-        <p>As a dedicated software developer, I specialize in web and mobile application development, 
-            with a strong focus on building efficient, user-friendly solutions. 
-            My expertise extends to data mining and cloud computing, 
-            enabling me to create scalable applications that leverage data for informed decision-making. 
-            I am also skilled in software testing, ensuring that the applications I develop meet high standards of quality and performance. 
-            Passionate about innovation, I’m always exploring the latest technologies to deliver impactful digital experiences.</p>
-    </div>
-    <img class="profile-picture" src="images/profile-picture.jpg" alt="profile-picture"/>
+<div class="container">
+  <h2>- About Me -</h2>
+  <div class="about-me-container" id="about-me">
+    <p class="about-me-description">
+      As a dedicated software developer, I specialize in web and mobile
+      application development, with a strong focus on building efficient,
+      user-friendly solutions. My expertise extends to data mining and cloud
+      computing, enabling me to create scalable applications that leverage data
+      for informed decision-making. I am also skilled in software testing,
+      ensuring that the applications I develop meet high standards of quality
+      and performance. Passionate about innovation, I’m always exploring the
+      latest technologies to deliver impactful digital experiences.
+    </p>
+
+    <img
+      class="profile-picture"
+      src="images/profile-picture.jpg"
+      alt="profile-picture"
+    />
+  </div>
+
+  <div class="cv-button">
+    <button (click)="DownloadCV()">Click Here to Download My CV</button>
+  </div>
 </div>
