--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,16 +1,30 @@
-<section class="home" id="home">
+<div class="container">
+  <app-top-nav-bar></app-top-nav-bar>
+
+  <section class="home" id="home">
     <div class="home-header">
-        <img src="" class="profile-picture"/>
-        <div class="header-content">
-            <h1>Hi! <span class="name">Rui Luan</span> here</h1>
-            <h2> - A Software Engineering Student</h2>
-        </div>
-        <div class="home-description">
-            <p>Hi there! I'm Kuik Rui Luan or you can called me Shirley. </p>
-        </div>
+      <img src="" class="profile-picture" />
+      <div class="header-content">
+        <h1>Hi! <span class="name">Rui Luan</span> here</h1>
+        <h2>- A Software Engineering Student</h2>
+      </div>
     </div>
-    
-    <div>
-        <button (click)="DownloadCV()">Download CV</button>
-    </div>
-</section>
+
+  </section>
+
+  <section class="about-me" id="about-me">
+    <app-about-me></app-about-me>
+  </section>
+
+  <section class="skills" id="skills">
+    <app-skills></app-skills>
+  </section>
+
+  <section class="projects" id="projects">
+    <app-projects></app-projects>
+  </section>
+
+  <section class="contact" id="contact">
+    <app-contact></app-contact>
+  </section>
+</div>
