--- a/src/app/components/skills/skills.component.scss
+++ b/src/app/components/skills/skills.component.scss
@@ -1,20 +1,45 @@
 .skills-container{
+    height: 1500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+    h2{
+        font-size: 40px;
+        font-weight: 800;
+        text-align: center;
+        word-spacing: 20px;
+        color: white;
+        
+    }
+
+    h3{
+        font-size: 25px;
+        font-weight: 700;
+        text-decoration: underline;
+        text-align: center;
+        color: white;
+    }
 
     .skills-icons-in-row{
+        width: 80%;
         display: flex;
+        justify-content: center;
+        align-items: center;
         flex-wrap: wrap;
-        margin: 60px;
-        border: 1px solid black;
+        border: 2px solid white;
 
         .skills-icon-name{
             display: flex;
             flex-direction: column;
+            justify-content: center;
             align-self: center;
             position: relative;
             margin: 25px;
             padding: 20px;
             width: 110px;
-            height: auto;
+            height: 110px;
             background-color: rgb(244, 237, 221);
             border-radius: 50%;
 
