--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,47 @@
-<p>##copyright</p>
+<div class="footer-container">
+  <div class="quick-link-container">
+    <ul>
+      <li>
+        <a href="#about-me">About Me</a>
+      </li>
+      <li>
+        <a href="#skills">Skills</a>
+      </li>
+      <li>
+        <a href="#projects">Projects</a>
+      </li>
+      <li>
+        <a href="#contact">Contact</a>
+      </li>
+    </ul>
+  </div>
+
+  <div class="social-media-container">
+    <ul>
+      <li>
+        <a href="https://github.com/Shirley24k" target="_blank">
+          <i class="fa fa-github" aria-hidden="true"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/kuik-rui-luan-244049282" target="_blank">
+          <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://wa.me/60177220232" target="_blank">
+          <i class="fa fa-whatsapp" aria-hidden="true"></i>
+        </a>
+      </li>
+      <li>
+        <a href="mailto:kuik0224@gmail.com">
+          <i class="fa fa-envelope-o" aria-hidden="true"></i>
+        </a>
+      </li>
+    </ul>
+  </div>
+
+  <div class="copyright-container">
+    <p>&COPY; 2024 Designed by Kuik Rui Luan  </p> 
+  </div>
+</div>
