--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,14 +2,50 @@
   <app-top-nav-bar></app-top-nav-bar>
 
   <section class="home" id="home">
+    
     <div class="home-header">
-      <img src="" class="profile-picture" />
       <div class="header-content">
-        <h1>Hi! <span class="name">Rui Luan</span> here</h1>
-        <h2>- A Software Engineering Student</h2>
+        <h1>
+          Hi! <br />
+          <span class="name">Rui Luan</span> here.
+        </h1>
+        <h2>
+          <span class="job-title">Software Engineering</span><br />Student
+        </h2>
+      </div>
+      <img
+        src="images/laptop wave.png"
+        alt="profile-picture"
+        class="profile-picture"
+      />
+      <div class="social-media-container">
+        <ul>
+          <li>
+            <a href="https://github.com/Shirley24k" target="_blank">
+              <i class="fa fa-github" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/kuik-rui-luan-244049282"
+              target="_blank"
+            >
+              <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://wa.me/60177220232" target="_blank">
+              <i class="fa fa-whatsapp" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li>
+            <a href="mailto:kuik0224@gmail.com">
+              <i class="fa fa-envelope-o" aria-hidden="true"></i>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
-
   </section>
 
   <section class="about-me" id="about-me">
@@ -26,5 +62,9 @@
 
   <section class="contact" id="contact">
     <app-contact></app-contact>
+  </section>
+
+  <section class="footer" id="footer">
+    <app-footer></app-footer>
   </section>
 </div>
