--- a/src/app/components/top-nav-bar/top-nav-bar.component.html
+++ b/src/app/components/top-nav-bar/top-nav-bar.component.html
@@ -1,8 +1,9 @@
 <div class="top-nav-bar-container">
-    <a href="#" class = "logo"><img src="favicon.png"> 
-        <p class="name">{{displayText}}</p>
+    <a href="#" class = "logo">
+        <img src="favicon.png"> 
+        <span class="name">{{displayText}}</span>
     </a>
-    <div id="menu" class="fas fa-bars"></div>
+    <!-- <div id="menu" class="fa fa-bars"></div> -->
     <nav class="top-nav-bar-buttons">
         <ul class="nav-buttons">
             <li>
