--- a/src/app/components/about-me/about-me.component.scss
+++ b/src/app/components/about-me/about-me.component.scss
@@ -7,7 +7,7 @@
     
     h2{
         font-size: 40px;
-        font-weight: 800;
+        font-weight: 600;
         text-align: center;
         word-spacing: 20px;
     }
@@ -38,7 +38,7 @@
 
     .cv-button{
         width: 100%;
-        background-color: rgb(40, 5, 109);
+        background-color: #0f2455c0;
         margin: 20px 0;
         padding: 20px;
         display: flex;
@@ -49,7 +49,7 @@
         button{
           background-color: transparent;
           border: none;
-          color: white;
+          color: #f5efe6;
           font-size: 20px;
           font-weight: 600;
           cursor: pointer;
