--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,33 +1,105 @@
 .container{
   width: 100vw;
   min-height: 100vh;
-  padding: 60px 0;
+  padding: 70px 0 0;
   overflow-x: hidden;
 
   .home{
     // background-image: url('path-to-your-background-image.jpg');
-    background-size: cover; /* Ensures the background covers the entire div */
-    background-position: center; /* Centers the background image */
-    height: 100vh; /* Full viewport height */
-      
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(135deg, #f1e6f7, #c5d0e2, #a4acb9, #a1b1cb);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    z-index: -1;
+
+    /* Gradient Animation */
+    @keyframes gradient {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
     .home-header {
       display: flex;
       flex-direction: row;
-      justify-content: center; /* Centers the profile image horizontally */
-      align-items: center; /* Centers the profile image vertically */
+      justify-content: center;
+      align-items: center;
       position: relative;
   
-      .profile-picture {
-        width: 150px; /* Adjust the size of your profile picture */
-        height: 150px;
-        border-radius: 50%; 
-        border: 4px solid white; /* Optional: Add a border around the profile picture */
-        }
-  
         .header-content {
+          margin-right: 100px;
+
+          h1{
+            font-size: 20px;
+            font-weight: 500;
+            .name{
+              font-size: 40px;
+              font-family: 'Times New Roman', Times, serif;
+              font-weight: 700;
+              color: #85694e;
+            }
+          }
+
+          h2{
+            font-size: 15px;
+            font-weight: 500;
+            .job-title{
+              font-size: 35px;
+              font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+              font-weight: 700;
+              color: #465169;
+            }
+          }
+        }
+
+        .profile-picture {
+          width: auto; /* Adjust the size of your profile picture */
+          height: 400px;
+          }
+
+        .social-media-container{
+          margin-left: 60px;
           
-          .name{
-            
+          ul{
+            list-style-type: none;
+            display: flex;
+            flex-direction: column;
+
+            li{
+              margin-top: 40px;
+
+              a{
+                color: #4f6377;
+                background-color: #f5efe6;
+                box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.326);
+                border-radius: 50%;
+                height: 70px;
+                width: 70px;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                padding: 15px;
+                
+                i{
+                  font-size: 20px;
+                  justify-self: center;
+                  align-self: center;
+                }
+              }
+
+              a:hover{
+                background-color: #4f6377;
+                color: #f5efe6;
+                i{
+                    font-size: 22px;
+                }
+              }
+            }
           }
         }
       
@@ -37,18 +109,22 @@
   }
   
   .about-me{
-    background-color: rgba(239, 230, 245, 0.703);
+    background-color: #c5d0e28c;
   }
 
   .skills{
-    background-color: rgb(40, 5, 109);
+    background-color: #0f2455c0;
   }
 
   .projects{
-    background-color: rgba(239, 230, 245, 0.703);
+    background-color: #c5d0e28c;
   }
 
   .contact{
-    background-color: rgb(40, 5, 109);
+    background-color: #0f2455c0;
+  }
+
+  .footer{
+    background-color: #c5d0e28c;
   }
 }
