--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -1,18 +1,23 @@
 .projects{
-
-    width: 100%;
+    height: 1100px;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 
     .section-title{
+        font-size: 40px;
+        font-weight: 600;
         text-align: center;
-        font-size: 35px;
+        word-spacing: 10px;
     }
 
     .project-container{
-
         display: flex;
         flex-direction: row;
         justify-content: center;
-        margin: 50px;
+        margin: 40px 20px;
         width: 90%;
 
         .images-container{
@@ -81,11 +86,13 @@
             flex-direction: column;
             justify-content: center;
             text-align: center;
-            width: 60%;
+            width: 40%;
             margin: 50px 100px;
 
             h2{
-
+                font-size: 20px;
+                text-decoration: underline;
+                text-align: center;
             }
 
             p{
@@ -93,16 +100,21 @@
             }
 
             h3{
-
+                font-size: 18px;
+                font-weight: 550;
+                text-align: center;
             }
 
             .tools{
                 display: flex;
                 flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                flex-wrap: wrap;
 
                 .tools-tag{
                     border-radius: 10px;
-                    background-color: rgb(232, 200, 237);
+                    background-color: #cabfad;
                     padding: 5px;
                     margin: 5px;
                 }
@@ -110,5 +122,35 @@
         }
 
 
+    }
+
+    .project-container:nth-child(odd) .images-container {
+        order: 1;
+      }
+
+    .project-container:nth-child(odd) .text-container {
+        order: 2;
+        padding-left: 20px;
+      }
+
+    .project-container:nth-child(even) {
+        flex-direction: row-reverse;
+      }
+      
+    .project-container:nth-child(even) .images-container {
+        order: 1;
+      }
+
+    .project-container:nth-child(even) .text-container {
+        order: 2;
+        padding-right: 20px;
+      }
+
+    .github-link{
+        text-align: center;
+        a{
+            font-weight: 600;
+            color: #0f2455c0;
+        }
     }
 }
