--- a/src/app/components/skills/skills.component.scss
+++ b/src/app/components/skills/skills.component.scss
@@ -1,5 +1,5 @@
 .skills-container{
-    height: 1500px;
+    height: 1400px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -40,7 +40,7 @@
             padding: 20px;
             width: 110px;
             height: 110px;
-            background-color: rgb(244, 237, 221);
+            background-color: #f5efe6;
             border-radius: 50%;
 
             img{
