--- a/src/app/components/about-me/about-me.component.scss
+++ b/src/app/components/about-me/about-me.component.scss
@@ -1,58 +1,103 @@
 .container{
-    height: 800px;
+    width: 100%;
+    padding: 80px 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    
-    h2{
-        font-size: 40px;
-        font-weight: 600;
-        text-align: center;
-        word-spacing: 20px;
-    }
 
     .about-me-container{
         display: flex;
         flex-direction: row;
         width: 80%;
-        margin-bottom: 50px;
-
-        .about-me-description{
-            justify-content: center;
-            align-self: center;
-            text-align: justify;
-            font-size: 20px;
-            line-height: normal;
-        }
+        align-items: center;
+        justify-content: center;
 
         .profile-picture{
             width: 280px;
-            height: 280px;
-            margin-left: 50px;
-            border-radius: 50%;
+            height: auto;
+            margin-right: 70px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
             align-items: center;
+
+            &:hover{
+                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+            }
         }
+
+        .about-me-content{
+            width: 50%;
+            
+            h2{
+                font-size: 40px;
+                font-weight: 600;
+                font-family: 'Poppins', sans-serif;
+                text-align: left;
+            }
+
+            .about-me-description{
+                margin-top: 30px;
+                justify-content: center;
+                align-self: center;
+                text-align: justify;
+                font-size: 17px;
+                line-height: 1.5;
+            }
+        }
+
+        .contact-info{
+            display: flex;
+            flex-direction: column;
+            justify-self: left;
+            margin-top: 40px;
+            
+            p{
+                font-size: 15px;
+                font-weight: 400;
+                i{
+                    padding-right: 5px;
+                }
+            }
+
+        }
+
+        .cv-button{
+            margin-top: 20px;
+            
+            button{
+                background-color: #0f2455c0;
+                color: #f5efe6;
+                font-size: 15px;
+                font-weight: 550;
+                cursor: pointer;
+            }
+          }
+
     }
 
-    .cv-button{
-        width: 100%;
-        background-color: #0f2455c0;
-        margin: 20px 0;
-        padding: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        
-        button{
-          background-color: transparent;
-          border: none;
-          color: #f5efe6;
-          font-size: 20px;
-          font-weight: 600;
-          cursor: pointer;
+    
+}
+
+@media(max-width: 760px){
+    .container{
+    
+        .about-me-container{
+            flex-direction: column;
+            width: 100%;
+    
+            .profile-picture{
+                margin-right: 0;
+                margin-bottom: 70px;
+                width: 80%;
+                max-width: 280px;
+            }
+    
+            .about-me-content{
+                width: 70%;
+            }
+    
         }
-      }
+    
+        
+    }
 }
