--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -24,7 +24,7 @@
         </a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/kuik-rui-luan-244049282" target="_blank">
+        <a href="https://www.linkedin.com/in/kuik-rui-luan" target="_blank">
           <i class="fa fa-linkedin-square" aria-hidden="true"></i>
         </a>
       </li>
@@ -42,6 +42,6 @@
   </div>
 
   <div class="copyright-container">
-    <p>&COPY; 2024 Designed by Kuik Rui Luan  </p> 
+    <p>&COPY; 2024 Designed by Kuik Rui Luan</p>
   </div>
 </div>
