--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -7,15 +7,21 @@
 
     .quick-link-container{
         margin: 10px;
+        
         ul{
            list-style-type: none;
             display: flex;
             flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            padding-left: 0;
+
             li{
                 margin: 0 10px;
+                text-align: center;
                 a{
                     text-decoration: none;
-                    font-weight: 500;
+                    font-weight: 600;
                     color: #4f6377;
                 }
 
@@ -33,9 +39,13 @@
             list-style-type: none;
             display: flex;
             flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            padding-left: 0;
 
             li{
                 margin: 10px;
+                text-align: center;
                 
                 a{
                     color: #4f6377;
