--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,14 +1,14 @@
 .container{
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   padding: 70px 0 0;
   overflow-x: hidden;
 
   .home{
-    // background-image: url('path-to-your-background-image.jpg');
+    width: 100%;
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    padding: 60px 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,7 +17,6 @@
     animation: gradient 15s ease infinite;
     z-index: -1;
 
-    /* Gradient Animation */
     @keyframes gradient {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
@@ -25,6 +24,7 @@
     }
 
     .home-header {
+      width: 90%;
       display: flex;
       flex-direction: row;
       justify-content: center;
@@ -32,77 +32,97 @@
       position: relative;
   
         .header-content {
-          margin-right: 100px;
+          margin-right: 20px;
+          width: 50%;
 
           h1{
-            font-size: 20px;
-            font-weight: 500;
+            font-size: 60px;
+            font-weight: 700;
+            font-family: 'Poppins', sans-serif;
+            line-height: 1;
             .name{
-              font-size: 40px;
-              font-family: 'Times New Roman', Times, serif;
-              font-weight: 700;
-              color: #85694e;
+              color: #465169;
+              font-weight: 650;
             }
           }
 
           h2{
-            font-size: 15px;
-            font-weight: 500;
+            font-size: 18px;
+            font-weight: 700;
+            font-family: 'Poppins', sans-serif;
             .job-title{
-              font-size: 35px;
-              font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-              font-weight: 700;
-              color: #465169;
+              color: #85694e;
             }
           }
-        }
 
-        .profile-picture {
-          width: auto; /* Adjust the size of your profile picture */
-          height: 400px;
+          p{
+            font-size: 14px;
+            text-align: justify;
+            text-wrap: wrap;
           }
-
-        .social-media-container{
-          margin-left: 60px;
           
-          ul{
-            list-style-type: none;
-            display: flex;
-            flex-direction: column;
+          .start-button{
+            margin-top: 20px;
+            button{
+              background-color: #465169;
+              color: white;
+              font-weight: 540;
+            }
+          }
+        }
 
-            li{
-              margin-top: 40px;
-
-              a{
-                color: #4f6377;
-                background-color: #f5efe6;
-                box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.326);
-                border-radius: 50%;
-                height: 70px;
-                width: 70px;
-                align-items: center;
-                justify-content: center;
-                text-align: center;
-                padding: 15px;
-                
-                i{
-                  font-size: 20px;
-                  justify-self: center;
-                  align-self: center;
+        .profile-social-media-container{
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+          .profile-picture {
+            width: auto; /* Adjust the size of your profile picture */
+            height: 400px;
+            }
+  
+          .social-media-container{
+            margin-left: 20px;
+            
+            ul{
+              list-style-type: none;
+              display: flex;
+              flex-direction: column;
+  
+              li{
+                margin-top: 40px;
+  
+                a{
+                  color: #4f6377;
+                  background-color: #f5efe6;
+                  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.326);
+                  border-radius: 50%;
+                  height: 70px;
+                  width: 70px;
+                  align-items: center;
+                  justify-content: center;
+                  text-align: center;
+                  padding: 15px;
+                  
+                  i{
+                    font-size: 20px;
+                    justify-self: center;
+                    align-self: center;
+                  }
                 }
-              }
-
-              a:hover{
-                background-color: #4f6377;
-                color: #f5efe6;
-                i{
-                    font-size: 22px;
+  
+                a:hover{
+                  background-color: #4f6377;
+                  color: #f5efe6;
+                  i{
+                      font-size: 22px;
+                  }
                 }
               }
             }
           }
         }
-      
+
     }
   
     
@@ -126,5 +146,97 @@
 
   .footer{
     background-color: #c5d0e28c;
+  }
+
+  .back-to-top{
+    position: fixed;
+    bottom: 3%;
+    right: 2%;
+    button{
+      background-color: #f5efe6;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+}
+
+@media(max-width: 800px){
+  .container{
+    padding: 50px 0 0;
+
+    .home{
+      .home-header {
+        flex-wrap: wrap-reverse;
+    
+          .header-content {
+            margin-right: 0;
+            margin-top: 30px;
+            width: 80%;
+          }
+
+          .profile-social-media-container{
+            flex-wrap: wrap;
+            .profile-picture {
+              height: 60vw;
+              }
+    
+            .social-media-container{
+              margin-left: 20px;
+              margin-bottom: 20px;
+            }
+          }
+      }
+    }
+  }
+}
+
+@media(max-width: 460px){
+  .container{
+    
+    .home{
+      .home-header {  
+        flex-wrap: wrap;
+        justify-content: flex-start;
+
+          .header-content {
+            h1{
+              font-size: 50px;
+              font-weight: 700;
+              .name{
+                color: #465169;
+                font-weight: 650;
+              }
+            }
+          }
+  
+          .profile-social-media-container{
+            flex-wrap: wrap-reverse;
+            justify-content: space-between;
+            
+            .profile-picture {
+              height: 60vw;
+              display: block;
+              align-self: flex-start;
+              margin: 0;
+              }
+    
+            .social-media-container{
+              margin: 0;
+              ul{
+                flex-direction: row;
+                gap: 16px;
+                justify-content: center;
+                align-items: center;
+                padding: 0;
+                
+                li{
+                  margin-top: 20px;
+                }
+              }
+            }
+          }
+      }
+    }
   }
 }
