--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -1,6 +1,5 @@
 .projects{
-    height: 1100px;
-    padding: 50px;
+    padding: 80px 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -9,8 +8,8 @@
     .section-title{
         font-size: 40px;
         font-weight: 600;
+        font-family: 'Poppins', sans-serif;
         text-align: center;
-        word-spacing: 10px;
     }
 
     .project-container{
@@ -18,7 +17,7 @@
         flex-direction: row;
         justify-content: center;
         margin: 40px 20px;
-        width: 90%;
+        width: 100%;
 
         .images-container{
             position: relative;
@@ -86,12 +85,13 @@
             flex-direction: column;
             justify-content: center;
             text-align: center;
-            width: 40%;
-            margin: 50px 100px;
+            width: 50%;
+            margin: 50px;
+            font-family: 'Poppins', sans-serif;
 
             h2{
                 font-size: 20px;
-                text-decoration: underline;
+                font-weight: 600;
                 text-align: center;
             }
 
@@ -152,5 +152,50 @@
             font-weight: 600;
             color: #0f2455c0;
         }
+    }
+}
+
+@media(max-width: 800px){
+    .projects{
+        .section-title{
+            line-height: 1;
+        }
+        
+        .project-container{
+            flex-direction: column;
+
+            
+
+            .text-container{
+                align-self: center;
+                width: 80%;
+            }
+        }
+        .project-container:nth-child(odd) .text-container,
+        .project-container:nth-child(even) .text-container {
+            padding-left: 0;
+          }
+    
+        .project-container:nth-child(even) {
+            flex-direction: column;
+          }
+          
+    }
+}
+
+@media(max-width: 500px){
+    .projects{
+        
+        .project-container{
+
+            .images-container{
+                img{
+                    width: auto;
+                    max-width: 300px;
+                }
+            }
+
+        }
+          
     }
 }
