--- a/src/app/components/skills/skills.component.scss
+++ b/src/app/components/skills/skills.component.scss
@@ -1,5 +1,5 @@
 .skills-container{
-    height: 1400px;
+    padding: 80px 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -7,45 +7,54 @@
 
     h2{
         font-size: 40px;
-        font-weight: 800;
+        font-weight: 600;
+        font-family: 'Poppins', sans-serif;
         text-align: center;
-        word-spacing: 20px;
         color: white;
         
     }
 
     h3{
         font-size: 25px;
-        font-weight: 700;
-        text-decoration: underline;
+        font-weight: 550;
+        font-family: 'Poppins', sans-serif;
         text-align: center;
         color: white;
+        margin-top: 60px;
     }
 
     .skills-icons-in-row{
         width: 80%;
+        max-width: 900px;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
         border: 2px solid white;
+        border-radius: 10px;
 
         .skills-icon-name{
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-self: center;
+            align-items: center;
             position: relative;
             margin: 25px;
             padding: 20px;
-            width: 110px;
-            height: 110px;
+            width: 80px;
+            height: 80px;
             background-color: #f5efe6;
-            border-radius: 50%;
+            border-radius: 10%;
+
+            &:hover{
+                background-color: #f4eadc;
+                box-shadow: 1px 1px 5px white;
+            }
 
             img{
                 margin: 0 auto;
-                width: 80px;
+                width: 40px;
                 height: auto;
                 -webkit-filter: grayscale(100%);
                 filter: grayscale(100%);
@@ -58,8 +67,45 @@
 
             p{
                 text-align: center;
-                font-weight: 700;
+                font-weight: 600;
+                line-height: 1.2;
+                font-family: 'Poppins', sans-serif;
                 margin: 5px;
+            }
+        }
+    }
+}
+
+@media(max-width: 800px){
+    .skills-container{
+    
+        .skills-icons-in-row{
+            .skills-icon-name{
+
+                img{
+                    width: 30px;
+                    -webkit-filter: grayscale(0%);
+                    filter: grayscale(0%);
+                }
+            }
+        }
+    }
+}
+
+@media(max-width: 530px){
+    .skills-container{
+    
+        .skills-icons-in-row{
+            .skills-icon-name{
+                width: 60px;
+                height: 60px;
+                margin: 15px;
+                padding: 15px;
+    
+                p{
+                    font-size: 12px;
+                    margin: 5px;
+                }
             }
         }
     }
